--- a/google.html
+++ b/google.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Google fake knock off</title>
-    <link rel="stylesheet" href="googlestyle.css">
-  </head>
-  <body>
-    <nav class="top-links">
+<head>
+  <meta charset="utf-8">
+  <title>Google fake knock off</title>
+  <link rel="stylesheet" href="googlestyle.css”>
+</head>
+<body>
+  <h1 class="Google">Google</h1>
+  <nav class="top-links">
     <ul>
       <li>All</li>
       <li>Images</li>
@@ -15,8 +16,19 @@
       <li>More</li>
       <li>Search tools</li>
     </ul>
-    </nav>
-
-  </body>
+  </nav>
+  <ul>
+    <li>About #long number</li>
+  </ul>
+  <div id=“time”>
+      <span class=“current time”> 2:30pm </span>
+      <span class=“day”> Friday,</span>
+        <span class=“month”> February 12, 2016</span>
+        <span class=“timezone”>(EST)</span>
+    </div>
+    <span>Time in Miami Beach, FL</span>
+    </div>
+  </div>
+</body>
 
 </html>
