google html & css

--- a/google.html
+++ b/google.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Google fake knock off</title>
-  <link rel="stylesheet" href="googlestyle.css”>
+  <link rel="stylesheet" href="googlestyle.css">
 </head>
 <body>
   <h1 class="Google">Google</h1>
@@ -17,18 +17,19 @@
       <li>Search tools</li>
     </ul>
   </nav>
-  <ul>
-    <li>About #long number</li>
-  </ul>
-  <div id=“time”>
-      <span class=“current time”> 2:30pm </span>
-      <span class=“day”> Friday,</span>
-        <span class=“month”> February 12, 2016</span>
-        <span class=“timezone”>(EST)</span>
-    </div>
-    <span>Time in Miami Beach, FL</span>
-    </div>
+  <div id="number of results">
+    <span> About #long number </span>
   </div>
+  <div id=“time”>
+    <p class=“current time”> 2:30pm </p>
+    <span class=“day”> Friday, </span>
+    <span class=“month”> February 12, 2016 </span>
+    <span class=“timezone”>(EST) </span>
+  </div>
+  <span> Time in Miami Beach, FL </span>
+</div>
+
+
 </body>
 
 </html>
