next step is add space above results

--- a/google.html
+++ b/google.html
@@ -18,7 +18,7 @@
     </ul>
   </nav>
   <div id="number of results">
-    <span> About #long number </span>
+    <span> About 11,570,000,000 results (0.41 seconds) </span>
   </div>
   <div id=“time”>
     <p class=“current time”> 2:30pm </p>
